Fixed notes not showing up on Chrome
made some variable scope changes

--- a/sources/css/sbplus_fonts.scss
+++ b/sources/css/sbplus_fonts.scss
@@ -1,7 +1,3 @@
-@function rem( $px, $base: $font-size ) {
-    @return ( $px / $base ) * 1rem;
-}
-
 @mixin sbplusFonts() {
     font-family: 'sbplus';
 	speak: none;
